# dingusppc

./: .gitignore  CMakeLists.txt  README.md  endianswap.h  main.cpp  memaccess.h
benchmark/: bench1.cpp
core/: CMakeLists.txt  endianswap.h  hostevents.h  hostevents_sdl.cpp  memaccess.h  timermanager.cpp  timermanager.h
cpu/ppc/: ppcdisasm.cpp  ppcdisasm.h  ppcemu.h  ppcexceptions.cpp  ppcexec.cpp  ppcmacros.h  ppcmmu.cpp  ppcmmu.h  ppcopcodes.cpp
debugger/: CMakeLists.txt  atraps.cpp  atraps.h  backtrace.cpp  backtrace.h  debugger.cpp  kgmacros.cpp  kgmacros.h  kgmacrostypes.h  kgmarcros.cpp  symbols.cpp  symbols.h  symbolsopenfirmware.cpp  symbolsopenfirmware.h  symbolssopenfirmware.cpp
devices/: CMakeLists.txt  deviceregistry.cpp  deviceregistry.h
devices/common/: dbdma.cpp  dbdma.h  dmacore.h  hwcomponent.cpp  hwcomponent.h  hwinterrupt.cpp  hwinterrupt.h  machineid.h  mmiodevice.h  nvram.cpp  nvram.h  ofnvram.cpp  ofnvram.h  viacuda.cpp  viacuda.h
devices/ethernet/: bigmac.cpp  bigmac.h  mace.cpp  mace.h
devices/floppy/: floppyimg.cpp  floppyimg.h  superdrive.cpp  superdrive.h  swim3.cpp  swim3.h
machines/: machine.h  machinealchemy.cpp  machinebase.cpp  machinebase.h  machinebondi.cpp  machinecatalyst.cpp  machinefactory.cpp  machinefactory.h  machinegazelle.cpp  machinegossamer.cpp  machinelombard.cpp  machinepdm.cpp  machinepippin.cpp  machineproperties.cpp  machineproperties.h  machinetnt.cpp  machineyosemite.cpp  romidentity.cpp  romidentity.h
tests/: test_dbdma.cpp
utils/: CMakeLists.txt  metaimgfile.cpp  metaimgfile.h
(+174 files in other folders)
